--- a/ml/0_basic_markov_process.ipynb
+++ b/ml/0_basic_markov_process.ipynb
@@ -397,10 +397,68 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Markov Decision Processes (MDP)\n",
+    "# Markov Decision Processes: MDP and POMDP\n",
     "---\n",
     "\n",
-    "* Partially observable MDP"
+    "Markov Decision Processes (MDP) and Partially Observable Markov Decision Processes, are generalization of Markov Processes and State Space Models (HMM and LDS) for situation when an agent can interact with its environment and modify the state of the world with actions whose effects are probabilistic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Definition\n",
+    "\n",
+    "A Partially Observable Markov Decision Process is composed of:\n",
+    "\n",
+    "* **states** $s_n$ of the world, which are latent variables\n",
+    "* **observations** $o_n$ from the world, generated from an emission probability $p(o_n|s_n)$\n",
+    "* **actions** $a_n$ that our agent can perform at each state\n",
+    "* **state transitions** which depends on the last state and last action only $p(s_{n+1}|s_n, a_n)$\n",
+    "* **rewards** $r_i$ associated to a transitions subject to the probability $p(r_n, s_{n+1}|s_n, a_n)$\n",
+    "\n",
+    "The Bayesian Network that represent the dependency and independence is:\n",
+    "\n",
+    "&emsp; $\\begin{align} & s_1 \\rightarrow o_1 \\\\ & \\downarrow \\\\ a_1 \\rightarrow & s_2 \\rightarrow o_2 \\\\ & \\downarrow \\\\ a_2 \\rightarrow & s_3 \\rightarrow o_3 \\end{align}$\n",
+    "\n",
+    "The **policy** is the strategy followed by the agent to **maximize the expected reward over time**. The policy is responsible for the selection of the action $a_i$ at step $i$, that is the action to select based on the past observations $o_1 \\dots o_i$ and actions $a_1 \\dots a_{i-1}$, or equivalently based on the belief of the state $s_i$.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Why Markov?\n",
+    "\n",
+    "The transition distribution $p(s_{n+1}|s_n, a_n)$ represents the **model of the world** (how does the world react based on actions). The policy $p(a_n|s_n)$ represents our agent and how it selects its actions. We can combine both in a joint distribution:\n",
+    "\n",
+    "&emsp; $p(a_{n+1}|s_{n+1}) \\, p(s_{n+1}|s_n, a_n) = p(a_{n+1},s_{n+1}|s_n, a_n)$\n",
+    "\n",
+    "This forms a Markov Chain of pairs of state and actions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Maximizing reward\n",
+    "\n",
+    "The goal of the policy is to maximize with respect to the the policy the reward over time, the **state value** $\\mathbb{V}[s_n]$, the total reward from state $s_n$.\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} p(a_n|s_n) \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\mathbb{V}[s_{n+1}] \\big)$\n",
+    "\n",
+    "Alternatively, we can maximize the **action-value** $\\mathbb{Q}[s_n, a_n]$, the total reword from state $s_n$ if we perform the action $a_n$:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\sum_{a_{n+1}} p(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}] \\big)$\n",
+    "\n",
+    "The action value and state value are linked together:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} p(a_n|s_n) \\, \\mathbb{Q}[s_n, a_n] = \\mathbb{E}_{a \\sim p(a)}[\\mathbb{Q}[s_n, a_n]]$\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\big( r_n + \\mathbb{V}[s_{n+1}] \\big) = \\mathbb{E}_{r,s \\sim p(s,a)}[r_n + \\mathbb{V}[s_{n+1}]]$\n",
+    "\n",
+    "Maximizing one with respect to the policy is equivalent in maximizing the other. In general though, the action value is easier to optimize in Reinforcement Learning because we do not have access to the probability distribution $p(r_n, s_{n+1}|s_n, a_n)$: the trick is to select an action and interact with the environment to get the reward and the next state. We use these samples to estimate the true expectation: this is the intuition behind algorithms such as SARSA and Q-Learning."
    ]
   },
   {
