--- a/ml/0_basic_markov_process.ipynb
+++ b/ml/0_basic_markov_process.ipynb
@@ -433,7 +433,7 @@
     "\n",
     "&emsp; $p(a_{n+1}|s_{n+1}) \\, p(s_{n+1}|s_n, a_n) = p(a_{n+1},s_{n+1}|s_n, a_n)$\n",
     "\n",
-    "This forms a Markov Chain of pairs of state and actions."
+    "This forms an order 1 Markov Chain of pairs of state and actions."
    ]
   },
   {
@@ -442,9 +442,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Maximizing reward\n",
+    "### Maximizing long term reward\n",
     "\n",
-    "The goal of the policy is to maximize with respect to the the policy the reward over time, the **state value** $\\mathbb{V}[s_n]$, the total reward from state $s_n$.\n",
+    "The goal of the policy is to maximize with respect to the the policy the reward over time, the **state value** $\\mathbb{V}[s_n]$, the total reward from state $s_n$ to the end of the **episode**.\n",
     "\n",
     "&emsp; $\\displaystyle \\mathbb{V}[s_n] = \\sum_{a_n} p(a_n|s_n) \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\mathbb{V}[s_{n+1}] \\big)$\n",
     "\n",
@@ -458,7 +458,21 @@
     "\n",
     "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\big( r_n + \\mathbb{V}[s_{n+1}] \\big) = \\mathbb{E}_{r,s \\sim p(s,a)}[r_n + \\mathbb{V}[s_{n+1}]]$\n",
     "\n",
-    "Maximizing one with respect to the policy is equivalent in maximizing the other. In general though, the action value is easier to optimize in Reinforcement Learning because we do not have access to the probability distribution $p(r_n, s_{n+1}|s_n, a_n)$: the trick is to select an action and interact with the environment to get the reward and the next state. We use these samples to estimate the true expectation: this is the intuition behind algorithms such as SARSA and Q-Learning."
+    "Maximizing one with respect to the policy is equivalent to maximizing the other, but the action value is usually easier to optimize since we do not have access to the probability distribution $p(r_n, s_{n+1}|s_n, a_n)$. The trick is to select an action and interact with the environment to get the reward and the next state. We use these samples to estimate the true expectation: this is the intuition behind algorithms such as SARSA and Q-Learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Infinite sequence of actions\n",
+    "\n",
+    "For environment with infinite sequences of actions, the expected reward will often be infinite. To deal with infinite episodes, we have to make sure that this expected value does not diverge:\n",
+    "\n",
+    "* Either by discounting the rewards by a factor $0 \\le \\gamma < 1$\n",
+    "* Either by keeping track of a moving average and maximizing the different to it"
    ]
   },
   {
