--- a/ml/0_basic_markov_process.ipynb
+++ b/ml/0_basic_markov_process.ipynb
@@ -472,7 +472,7 @@
     "For environment with infinite sequences of actions, the expected reward will often be infinite. To deal with infinite episodes, we have to make sure that this expected value does not diverge:\n",
     "\n",
     "* Either by discounting the rewards by a factor $0 \\le \\gamma < 1$\n",
-    "* Either by keeping track of a moving average and maximizing the different to it"
+    "* Either by maximizing the average of rewards over time"
    ]
   },
   {
