--- a/ml/0_basic_markov_process.ipynb
+++ b/ml/0_basic_markov_process.ipynb
@@ -450,7 +450,7 @@
     "\n",
     "Alternatively, we can maximize the **action-value** $\\mathbb{Q}[s_n, a_n]$, the total reword from state $s_n$ if we perform the action $a_n$:\n",
     "\n",
-    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\sum_{a_{n+1}} p(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}] \\big)$\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] = \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\sum_{a_{n+1}} p(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
     "\n",
     "The action value and state value are linked together:\n",
     "\n",
@@ -467,12 +467,75 @@
    "source": [
     "<br>\n",
     "\n",
+    "### Optimal deterministic policy\n",
+    "\n",
+    "The expected value of a state allows our agent to behave rationally by selecting the best action in a given situation, giving us the optimal policy $\\pi^*(s)$. The action value allows our agent to estimate the expected long time reward: **the greedy approach for the action value ends up being the optimal long term approach for the original reward system**.\n",
+    "\n",
+    "&emsp; $\\pi^*(s) = \\underset{a}{\\operatorname{argmax}} \\mathbb{Q}[s, a]$\n",
+    "&emsp; which is a system of $N$ equations ($N$ being the number of states)\n",
+    "\n",
+    "Optimizing this set of equations is not easy due to the existence of the *max* operator. Fortunately, we can proceed by iterations of a **Bellman update**, which converges to the optimal policy if we discount future rewards:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\sum_{s_{n+1}} p(r_n, s_{n+1}|s_n, a_n) \\, \\big( r_n + \\gamma \\underset{a_{n+1}}{\\operatorname{max}} \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
+    "&emsp; where $\\gamma$ is a discount factor\n",
+    "\n",
+    "These updates have to be performed for all states and all actions at these states. The frequency of update is not critical: **as long as each couple (state, action) is sampled with non-zero probablity, convergence is garantied**. In general, the policy will converge faster than the estimates of the action values, and so we can focus our updates on the state action pairs that matter the most, typically the ones with the highest action values.\n",
+    "\n",
+    "Note that this optimal policy is not concerned with non-deterministic policies, which could be better than deterministic policies (for instance when we play a game, there are **mixed strategies** that often outperform **pure strategies**)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Unknown world models\n",
+    "\n",
+    "When the world model $p(r_n, s_{n+1}|s_n,a_n)$ is not known, as it is the case in most situations, the Bellman update above cannot be performed. Instead, we have to interact with the world to get the transitions and rewards. Since the state transitions are likely to be non-deterministic, the Bellman update needs to be a moving average:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\underset{a_{n+1}}{\\operatorname{max}} \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
+    "&emsp; which has the form of a gradient ascent\n",
+    "\n",
+    "The second problem is that we cannot try all actions $a_n$ for a given state $s_n$: once we interacted with the world, the world has already changed. We cannot either systematically follow the optimal policy known at the given time, for it would not update the values for the other actions, and could make us miss some opportunities.\n",
+    "\n",
+    "We can for instance follow an **epsilon greedy policy**: we select the best action most of the time and otherwise select a random action. Then we need to decide how we update the action value while following this epsilon policy::\n",
+    "\n",
+    "* **on-policy** methods estimate the action value by sampling (taking into account the epsilon random actions)\n",
+    "* **off-policy** methods estimate the action value by taking the maximum of the next actions (ignoring the epsilon)\n",
+    "\n",
+    "The off-policy and on-policy methods leads to different Bellman updates:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\sum_{a_{n+1}} p(a_{n+1}|s_{n+1}) \\, \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
+    "&emsp; (on-policy: SARSA)\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{Q}[s_n, a_n] \\leftarrow \\alpha \\, \\mathbb{Q}[s_n, a_n] + (1 - \\alpha) \\big( r_n + \\gamma \\underset{a_{n+1}}{\\operatorname{max}} \\mathbb{Q}[s_{n+1}, a_{n+1}] \\big)$\n",
+    "&emsp; (off-policy: Q-Learning)\n",
+    "\n",
+    "These two method can lead to different learned policy. Typically, the on-policy method will not be the optimal policy (it will be more cautious and avoid paths that are closed to bad actions), but on-policy methods are also more stable to converge and avoid the **deadly triad** (see RL). We can also decrease the value of epsilon over time to make on-policy converge to the true optimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "### Infinite sequence of actions\n",
     "\n",
     "For environment with infinite sequences of actions, the expected reward will often be infinite. To deal with infinite episodes, we have to make sure that this expected value does not diverge:\n",
     "\n",
     "* Either by discounting the rewards by a factor $0 \\le \\gamma < 1$\n",
     "* Either by maximizing the average of rewards over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Example: Cautious vs non-cautious policy"
    ]
   },
   {
