--- a/ml/0_basic_tree_searches.ipynb
+++ b/ml/0_basic_tree_searches.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DFS, BFS, back-tracking\n",
+    "# Adversarial games\n",
     "# MCTS\n",
     "# MINIMAX\n",
     "# ALPHA BETA PRUNING"
