--- a/ml/0_basic_tree_searches.ipynb
+++ b/ml/0_basic_tree_searches.ipynb
@@ -9,7 +9,7 @@
     "# DFS, BFS, back-tracking\n",
     "# Adversarial games\n",
     "# MCTS\n",
-    "# MINIMAX\n",
+    "# MINIMAX - only works if the best strategy does not depend on other - and if it is pure strategy\n",
     "# ALPHA BETA PRUNING"
    ]
   }
