--- a/ml/7_neural_networks.ipynb
+++ b/ml/7_neural_networks.ipynb
@@ -139,12 +139,39 @@
     "\n",
     "Gradient descent is not garantied to find the global minimum of the error. The parameters of the different layers will likely not be optimal. The result will also greatly depend on the starting point.\n",
     "\n",
-    "* we do not search the global minimum\n",
-    "* importance of selection of a right start (randomization)\n",
-    "* there are few local minimum (exponentially few)\n",
-    "* the saddle points are the real problem\n",
-    "* often a way out in high dimension\n",
-    "* stochastic gradient descent"
+    "<br>\n",
+    "\n",
+    "### Saddle points\n",
+    "\n",
+    "Gradient descent will stay stuck at point where the gradient $\\nabla f$ is zero. A minimum is reached if the Hessian $H$ is posivite definite ($\\forall x, x^T H x \\ge 0$), maximum if the Hessian is negative definite ($\\forall x, x^T H x \\le 0$), and is otherwise a saddle point.\n",
+    "\n",
+    "In high dimensional problems, it is believed that the main issue are saddle points. Indeed, if we take a random function, the chances of all dimensions having a global minimum grows as $2^{-D}$ where $D$ is the number of dimensions (1 chance over 2 for each dimension to grow when following that direction).\n",
+    "\n",
+    "In addition to being rare, the local minimum are, in the case of deep neural network empirically not very far away from the global minimums, and so the main danger is really to avoid saddle points. There are many ways to avoid them, among which:\n",
+    "\n",
+    "* gradient descent momentum (to keep going in the same direction in case of zero derivatives)\n",
+    "* stochastic gradient descent (the estimate of the gradient will introduce noise and avoid being stuck)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Optimisation vs Generalization\n",
+    "\n",
+    "Another reason why local minimums are not as terrible as it might first seem is that in Machine Learning, we are as much interested in optimizing the loss function as optimizing the **performance out of sample**, that is generalizing to non-observed data. The global minimum might not be the optimal solution in a generalization perspective.\n",
+    "\n",
+    "Furthermore, we never actually quite go to the lowest points, and even local minima, because of **early-stopping**. We generally interrupt the training loop before it is over, by watching the error on the validation set. Optimization remains really important, but mostly to avoid the saddle points or the few bad local minimum.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Multi-dimensional escape routes\n",
+    "\n",
+    "Another thing that fails us as human is our intuition of low dimensional spaces when dealing with high dimensional spaces. Our intuitions about local minimums are also low dimensional as we cannot visualize high dimensional spaces.\n",
+    "\n",
+    "The big classic to demonstrate this is the demonstration that the maximum of the volume of a sphere is located near the surface of a sphere in high dimensional spaces. Indeed, the volume of a sphere grows as the radius to the power of the number of dimensions, and so the 1% close to the surface will quickly occupy most of the volume:\n",
+    "\n",
+    "&emsp; $\\displaystyle V = R^D \\implies \\frac{(R + dR)^D}{R^D} = \\big(1 + \\frac{dR}{R} \\big)^D \\underset{D \\rightarrow \\infty}{\\longrightarrow} \\infty$\n",
+    "&emsp; (ratio of volumes goes to infinity)\n",
+    "\n",
+    "Similarly, in high dimensional spaces, unless our low dimensional spaces, and especially with a noisy gradient estimate, there seems to always be some kind of escape route from a local minimum (at least with high probability)."
    ]
   },
   {
@@ -153,8 +180,27 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Feed forward networks\n",
-    "---"
+    "### Initialization\n",
+    "\n",
+    "Gradient descent will converge to different solutions depending on the initial conditions. Although we argued that local minimum are less dangerous in high dimensional spaces, it remains important to avoid the most difficult area in the landscape of our multi-dimensional (1 dimension by parameter) loss function.\n",
+    "\n",
+    "To that regard, a lot of efforts is being poured in to find the best way to initialize the weights for each layer of a neural network, here taken from the Pytorch documentation:\n",
+    "\n",
+    "* Linear layers: $w \\sim U \\big(-\\sqrt{\\frac{1}{N}}, \\sqrt{\\frac{1}{N}} \\big)$ where $N$ is the number of input features\n",
+    "\n",
+    "* CNN layers: $w \\sim U \\big(-\\sqrt{\\frac{1}{K \\times C}}, \\sqrt{\\frac{1}{K \\times C}} \\big)$ where $K$ is the kernel size and $C$ the number of channels\n",
+    "\n",
+    "In both cases, the goal is to ensure that the average weight is 0 (symmetric in outcomes positive or negative) and that the variance in the outputs is around 1, if the variance in the input is also around 1.\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[x] = \\frac{1}{2a} \\int_{-a}^{a} x^2 \\, dx = \\frac{1}{2a} \\Big[\\frac{x^3}{3} \\Big]_{-a}^{a} = \\frac{a^2}{3}$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[w] = \\frac{1}{3 N}$\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[x w] = \\mathbb{V}[x] \\, \\mathbb{V}[w] + \\mathbb{V}[x] \\, \\mathbb{E}[w]^2 + \\mathbb{E}[x]^2 \\, \\mathbb{V}[w] = \\mathbb{V}[w]$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\displaystyle \\mathbb{V}\\Big[\\sum_n x_n w_n\\Big] = N \\mathbb{V}[w] = \\frac{1}{3}$\n",
+    "\n",
+    "Indeed, neural network like their inputs to be normalized around 0 with variance 1, and outside of batch normalization, a carefule initialization of the weights is necessary to ensure that it holds."
    ]
   },
   {
